pisound-btn: Updating to version 1.01 with following changes:
* Double Click event support added.
* single_click.sh script will attempt to mount any attached USB device as well as search for main.pd first in the attached media, then, if not yet found, in /usr/local/etc/pisound-patches/ in the sdcard.
* double_click.sh script will kill all puredata instances and unmount the attached USB devices.
* hold.sh script will still safely shutdown the device.
* down.sh script was added for completeness, for your customization.
* up.sh script was also added for completeness, for your customization.
* Better visual feedback using the MIDI activity LEDs added:
	* After every click, the LEDs should flash.
	* In case of single_click.sh success, the LEDs should flash three times after puredata got started (can take a few seconds).
	* In case the patch was not found after single_click, one long flash should be displayed (firmware update for beta pisound boards is required).
	* After double_click.sh finishes unmounting attached media, it will flash with moderate duration for 2 times.
	* After hold.sh, the LED will flash 10 times quickly.

--- a/pisound-btn/Makefile
+++ b/pisound-btn/Makefile
@@ -18,6 +18,7 @@
 
 BINARY_DIR ?= /usr/local/bin
 SCRIPTS_DIR ?= /usr/local/etc/pisound
+PATCHES_DIR ?= /usr/local/etc/pisound-patches
 BACKUP_DIR := $(shell echo $(SCRIPTS_DIR)/backups/`date +"%F.%T"`)
 
 all: pisound-btn
@@ -30,6 +31,18 @@ backup-scripts:
 	@mkdir -p $(BACKUP_DIR)
 	@if test -e $(SCRIPTS_DIR)/click.sh; then \
 		cp -pR $(SCRIPTS_DIR)/click.sh $(BACKUP_DIR)/; \
+	fi
+	@if test -e $(SCRIPTS_DIR)/single_click.sh; then \
+		cp -pR $(SCRIPTS_DIR)/single_click.sh $(BACKUP_DIR)/; \
+	fi
+	@if test -e $(SCRIPTS_DIR)/double_click.sh; then \
+		cp -pR $(SCRIPTS_DIR)/double_click.sh $(BACKUP_DIR)/; \
+	fi
+	@if test -e $(SCRIPTS_DIR)/down.sh; then \
+		cp -pR $(SCRIPTS_DIR)/down.sh $(BACKUP_DIR)/; \
+	fi
+	@if test -e $(SCRIPTS_DIR)/up.sh; then \
+		cp -pR $(SCRIPTS_DIR)/up.sh $(BACKUP_DIR)/; \
 	fi
 	@if test -e $(SCRIPTS_DIR)/hold.sh; then \
 		cp -pR $(SCRIPTS_DIR)/hold.sh $(BACKUP_DIR)/; \
@@ -45,7 +58,12 @@ install: all backup-scripts
 	fi
 	@killall pisound-btn 2>/dev/null || true
 	@cp pisound-btn $(BINARY_DIR)/
-	@cp -p click.sh $(SCRIPTS_DIR)/ && chmod +x $(SCRIPTS_DIR)/click.sh
+	@mkdir -p $(PATCHES_DIR)
+	@chmod 777 $(PATCHES_DIR)
+	@cp -p single_click.sh $(SCRIPTS_DIR)/ && chmod +x $(SCRIPTS_DIR)/single_click.sh
+	@cp -p double_click.sh $(SCRIPTS_DIR)/ && chmod +x $(SCRIPTS_DIR)/double_click.sh
+	@cp -p up.sh $(SCRIPTS_DIR)/ && chmod +x $(SCRIPTS_DIR)/up.sh
+	@cp -p down.sh $(SCRIPTS_DIR)/ && chmod +x $(SCRIPTS_DIR)/down.sh
 	@cp -p hold.sh $(SCRIPTS_DIR)/ && chmod +x $(SCRIPTS_DIR)/hold.sh
 	@cp -p common.sh $(SCRIPTS_DIR)/ && chmod +x $(SCRIPTS_DIR)/common.sh
 	@cp -p pisound-btn-daemon.desktop /etc/xdg/autostart/
