Run pisound-btn using sudo by default, it seems kernel 4.9+ doesn't allow rgular processes to access gpio files.

--- a/pisound-btn/pisound-btn-daemon.desktop
+++ b/pisound-btn/pisound-btn-daemon.desktop
@@ -3,5 +3,5 @@ Type=Application
 Name=pisound button daemon autostart
 Comment=Monitor the interrupts signalled by the button and launch scripts.
 NoDisplay=true
-Exec=sh -c "pisound-btn >> ~/.pisound.log"
+Exec=sudo sh -c "pisound-btn >> /var/log/pisound.log"
 NotShowIn=GNOME;KDE;XFCE;
