--- a/pisound-btn/pisound.conf
+++ b/pisound-btn/pisound.conf
@@ -1,13 +1,12 @@
-DOWN         /usr/local/etc/pisound/down.sh
-UP           /usr/local/etc/pisound/up.sh
+DOWN         /usr/local/pisound/scripts/pisound-btn/system/down.sh
+UP           /usr/local/pisound/scripts/pisound-btn/system/up.sh
 
-SINGLE_CLICK /usr/local/etc/pisound/start_puredata.sh
-DOUBLE_CLICK /usr/local/etc/pisound/stop_puredata.sh
-TRIPLE_CLICK /usr/local/etc/pisound/toggle_wifi_hotspot.sh
+CLICK_1      /usr/local/pisound/scripts/pisound-btn/start_puredata.sh
+CLICK_2      /usr/local/pisound/scripts/pisound-btn/stop_puredata.sh
+CLICK_3      /usr/local/pisound/scripts/pisound-btn/toggle_wifi_hotspot.sh
+CLICK_OTHER  /usr/local/pisound/scripts/pisound-btn/do_nothing.sh
 
-OTHER_CLICKS /usr/local/etc/pisound/click.sh
-
-HOLD_1S      /usr/local/etc/pisound/hold.sh
-HOLD_3S      /usr/local/etc/pisound/toggle_bt_discoverable.sh
-HOLD_5S      /usr/local/etc/pisound/shutdown.sh
-HOLD_OTHER   /usr/local/etc/pisound/shutdown.sh
+HOLD_1S      /usr/local/pisound/scripts/pisound-btn/do_nothing.sh
+HOLD_3S      /usr/local/pisound/scripts/pisound-btn/toggle_bt_discoverable.sh
+HOLD_5S      /usr/local/pisound/scripts/pisound-btn/shutdown.sh
+HOLD_OTHER   /usr/local/pisound/scripts/pisound-btn/do_nothing.sh
