--- a/pisound-btn/debian/DEBIAN/control
+++ b/pisound-btn/debian/DEBIAN/control
@@ -1,9 +1,9 @@
 Package: pisound-btn
-Version: 1.05-2
+Version: 1.05-3
 Section: sound
 Priority: optional
 Architecture: armhf
-Depends: libc6 (>= 2.19), libgcc1 (>= 1:4.9.2-10), python3 (>= 3.4), python3-pip (>= 1.5.6), git (>= 1:2.1.4), hostapd (>= 1:2.3), dnsmasq (>= 2.72)
+Depends: libc6 (>= 2.19), libgcc1 (>= 1:4.9.2-10), python (>= 2.7), python-urwid (>= 1.3), git (>= 1:2.1.4), hostapd (>= 1:2.3), dnsmasq (>= 2.72)
 Maintainer: Blokas Labs <hello@blokas.io>
 Description: Pisound Button daemon.
  See https://blokas.io/pisound for more information.
