Fixed pisound-btn.deb dependencies and set up the Environment variables for the pisound-btn.service

--- a/pisound-btn/debian/usr/lib/systemd/system/pisound-btn.service
+++ b/pisound-btn/debian/usr/lib/systemd/system/pisound-btn.service
@@ -3,6 +3,8 @@ Description=Pisound button daemon autostart
 After=sound.target
 
 [Service]
+EnvironmentFile=/etc/environment
+Environment=HOME=/root
 ExecStart=/usr/bin/pisound-btn
 
 [Install]
