--- a/pisound-btn/debian/DEBIAN/control
+++ b/pisound-btn/debian/DEBIAN/control
@@ -1,9 +1,10 @@
 Package: pisound-btn
-Version: 1.07-1
+Version: 1.07-3
 Section: sound
 Priority: optional
 Architecture: armhf
-Depends: libc6 (>= 2.19), libgcc1 (>= 1:4.9.2-10), python (>= 2.7), python-urwid (>= 1.1), git (>= 1:2.1.4), hostapd (>= 1:2.3), dnsmasq (>= 2.72), libglib2.0-bin (>= 2.33.12)
+Pre-Depends: hostapd (>= 1:2.3), dnsmasq (>= 2.72)
+Depends: libc6 (>= 2.19), libgcc1 (>= 1:4.9.2-10), python (>= 2.7), python-urwid (>= 1.1), git (>= 1:2.1.4), libglib2.0-bin (>= 2.33.12)
 Maintainer: Blokas Labs <hello@blokas.io>
 Description: Pisound Button daemon.
  See https://blokas.io/pisound for more information.
