Modified time calculation to produce original 3 second min hold time
if --full-time is set then time counts from 0 (zero)
Updated time documentation for this and to point out that timings less
than 400ms are clicks not holds.

--- a/pisound-btn/Makefile
+++ b/pisound-btn/Makefile
@@ -26,6 +26,10 @@ pisound-btn: pisound-btn.c
 	gcc pisound-btn.c -o pisound-btn
 	strip pisound-btn
 
+test: test.c
+	gcc test.c -o test
+	strip test
+	
 $(PISOUND_DIR):
 	@if [ ! -d $(PISOUND_DIR) ]; then \
 		echo 'Copying this git repository to $(PISOUND_DIR)'; \
