Move wifi hotspot control to patchbox-wifi
Signed-off-by: Benjamin Herrenschmidt <benh@kernel.crashing.org>

--- a/pisound-btn/debian/DEBIAN/control
+++ b/pisound-btn/debian/DEBIAN/control
@@ -1,10 +1,9 @@
 Package: pisound-btn
-Version: 1.14-1
+Version: 1.15-1
 Section: sound
 Priority: optional
 Architecture: armhf
-Pre-Depends: hostapd (>= 2:2.6), dnsmasq (>= 2.72)
-Depends: libc6 (>= 2.19), libgcc1 (>= 1:4.9.2-10), python3 (>= 3.5), python3-urwid (>= 1.0), git (>= 1:2.1.4), libglib2.0-bin (>= 2.33.12)
+Depends: libc6 (>= 2.19), libgcc1 (>= 1:4.9.2-10), python3 (>= 3.5), python3-urwid (>= 1.0), git (>= 1:2.1.4), libglib2.0-bin (>= 2.33.12), patchbox-wifi (>= 1.0.0)
 Maintainer: Blokas Labs <hello@blokas.io>
 Description: Pisound Button daemon.
  See https://blokas.io/pisound for more information.
