--- a/pisound-btn/Makefile
+++ b/pisound-btn/Makefile
@@ -23,13 +23,13 @@ PATCHES_DIR ?= /usr/local/pisound-patches
 all: pisound-btn
 
 pisound-btn: pisound-btn.c
-	gcc pisound-btn.c -o pisound-btn
+	gcc pisound-btn.c -lgpiod -o pisound-btn
 	strip pisound-btn
 
 test: test.c
 	gcc test.c -o test
 	strip test
-	
+
 $(PISOUND_DIR):
 	@if [ ! -d $(PISOUND_DIR) ]; then \
 		echo 'Copying this git repository to $(PISOUND_DIR)'; \
