--- a/pisound-btn/Makefile
+++ b/pisound-btn/Makefile
@@ -1,5 +1,5 @@
 # pisound-btn daemon for the Pisound button.
-# Copyright (C) 2017  Vilniaus Blokas UAB, https://blokas.io/pisound
+# Copyright (C) 2017-2024  Vilniaus Blokas UAB, https://blokas.io/pisound
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License
@@ -16,9 +16,17 @@
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 #
 
-BINARY_DIR ?= /usr/local/bin
+VERSION=1.16
+
+PREFIX?=/usr/local
+
+BINARY_DIR ?= $(PREFIX)/bin
 PISOUND_DIR ?= /usr/local/pisound
 PATCHES_DIR ?= /usr/local/pisound-patches
+
+INSTALL?=install
+INSTALL_PROGRAM?=$(INSTALL)
+INSTALL_DATA?=$(INSTALL) -m 644
 
 all: pisound-btn
 
@@ -37,7 +45,16 @@ $(PISOUND_DIR):
 		cp -r ../. $(PISOUND_DIR); \
 	fi
 
-install: all $(PISOUND_DIR) # backup-scripts
+dist:
+	git archive --format=tar.gz --prefix=pisound-btn-$(VERSION)/ HEAD -o pisound-btn-$(VERSION).tar.gz
+
+install:
+	mkdir -p $(DESTDIR)$(BINARY_DIR)
+	$(INSTALL_PROGRAM) pisound-btn $(DESTDIR)$(BINARY_DIR)/
+	mkdir -p $(DESTDIR)/usr/local/etc
+	$(INSTALL_DATA) pisound.conf $(DESTDIR)/usr/local/etc/
+
+install-local: all $(PISOUND_DIR) # backup-scripts
 	@if test -e /etc/init.d/pisound-btn; then \
 		update-rc.d pisound-btn remove; \
 		/etc/init.d/pisound-btn stop; \
@@ -59,8 +76,7 @@ install: all $(PISOUND_DIR) # backup-scripts
 	@systemctl start pisound-btn > /dev/null 2>&1
 
 clean:
-	rm -f pisound-btn pisound-btn.deb
-	rm -rf debian/usr/bin/pisound-btn
+	rm -f pisound-btn test
 	gunzip `find . | grep gz` > /dev/null 2>&1 || true
 
 pisound-btn.deb: pisound-btn
